--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,18 @@ Jinja2==3.1.1
 MarkupSafe==2.1.1
 Werkzeug==2.1.1
 zipp==3.8.0
+
+numpy~=1.21.3
+matplotlib~=3.4.3
+keras~=2.7.0
+scikit-image~=0.19.2
+pip~=22.0.4
+attrs~=21.2.0
+wheel~=0.37.0
+Pillow~=8.4.0
+blinker~=1.4
+greenlet~=1.1.2
+setuptools~=50.3.2
+
+mediapipe~=0.8.8.1
+opencv-python~=4.5.4.58
