--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,11 @@ name = "pypi"
 
 [packages]
 gunicorn = "*"
-numpy = "~=1.21.3"
-matplotlib = "~=3.4.3"
-keras = "~=2.7.0"
-Flask = "~=2.1.1"
-Werkzeug = "~=2.1.1"
+numpy = "*"
+matplotlib = "*"
+keras = "*"
+Flask = "*"
+Werkzeug = "*"
 
 [dev-packages]
 
